--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 #dist: trusty
 sudo: false
+arch: ppc64le
 language: java
 services: docker
 addons:
@@ -34,9 +35,6 @@ matrix:
   include:
     - env: DB=build PACKET=8M
       jdk: openjdk11
-      arch:
-          - amd64
-          - ppc64le
     - env: SKYSQL=true PACKET=8M
       jdk: openjdk11
     - env: DB=mysql:5.6 PACKET=8M
